--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "simple-vue-validator": "^0.16.0",
     "vue": "^2.6.14",
     "vuex": "^3.6.2"
   },
